@@ -30,7 +30,3 @@ hr {
   margin: 0;
   border: 0;
 }
-
-svg {
-  fill: currentColor;
-}
