@@ -6,6 +6,7 @@
   * (grid) add: .(w|h)max { max-(width|height): 100% }
   * (grid) add: .xl-max
   * (border) add: .br[4-8]
+  * (normalize) remove SVG fill
 
 * 0.9.0 (2020-02-20)
 
